--- a/index.html
+++ b/index.html
@@ -4,8 +4,76 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css">
-    <title></title>
+    <title>Emojuice</title>
   </head>
 
-  <body></body>
+  <body>
+    <header>
+      <div>
+        <h1>
+          <img src="img/logo.svg" alt="">
+        </h1>
+        <p class="slogan">Boissons vététales préparées avec amour</p>
+        <nav>
+          <a href="" class="cta">Accédez à nos produits</a>
+          <a href="" class="cta-light">Nous contacter</a>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <div class="section-light">
+        <h2>Manger sainement: «un art de vie»</h2>
+        <p>
+          Chez emojuice, nous tentons de vous fournir 
+          des produits sains et respectueux de la planète.
+        </p>
+        <img src="img/peach.svg" alt="peach">
+        <img src="img/lemon.svg" alt="lemon">
+        <img src="img/watermelon.svg" alt="watermelon">
+        <img src="img/orange.svg" alt="orange">
+      </div>
+      <div class="section-color">
+        <h2>Nos produits</h2>
+        <div class="card-light">
+          <h3>Jus banane</h3>
+          <p>Notre plus grand classique.</p>
+          <a href="">En savoir plus</a>
+          <img src="img/banana.svg" alt="banana">
+        </div>
+        <div class="card-green">
+          <h3>Sirop kiwi</h3>
+          <p>En vert et contre tous.</p>
+          <a href="">En savoir plus</a>
+          <img src="img/kiwi.svg" alt="kiwi">
+        </div>
+        <div class="card-light-brown">
+          <h3>Glace au café</h3>
+          <p>«Un espresso pour Georges!»</p>
+          <a href="">En savoir plus</a>
+          <img src="img/coffee.svg" alt="coffee">
+        </div>
+        <div class="card-pink">
+          <h3>Délice à la fraise</h3>
+          <p>La voilà qui ramène sa fraise.</p>
+          <a href="">En savoir plus</a>
+          <img src="img/strawberry.svg" alt="strawberry">
+        </div>
+      </div>
+      <nav>
+        <div class="section-light">
+          <h2>Nous contacter</h2>
+          <a href="" class="social mail">emojuice@veggies.ch</a>
+          <a href="https://www.instagram.com" class="social instagram">Instagram</a>
+          <a href="https://www.facebook.com" class="social facebook">Facebook</a>
+        </div>
+      </nav>
+    </main>
+    <footer>
+      <p></p>
+      <img src="" alt="">
+      <img src="" alt="">
+      <img src="" alt="">
+      <img src="" alt="">
+    </footer>
+  </body>
 </html>
