--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
     </main>
     <footer>
       <p></p>
-      <img src="" alt="">
-      <img src="" alt="">
-      <img src="" alt="">
-      <img src="" alt="">
+      <img src="img/banana.svg" alt="banana">
+      <img src="img/kiwi.svg" alt="kiwi">
+      <img src="img/apple.svg" alt="apple">
+      <img src="img/pineapple.svg" alt="pineapple">
     </footer>
   </body>
 </html>
