--- a/index.html
+++ b/index.html
@@ -9,53 +9,59 @@
 
   <body>
     <header>
-      <div>
+      <div class="bg-head">
         <h1>
-          <img src="img/logo.svg" alt="">
+          <img src="img/logo.svg" alt="fruit background">
         </h1>
         <p class="slogan">Boissons vététales préparées avec amour</p>
-        <nav>
-          <a href="" class="cta">Accédez à nos produits</a>
-          <a href="" class="cta-light">Nous contacter</a>
-        </nav>
       </div>
+        <nav class="cta-container">
+          <a href="" class="cta ">Accédez à nos produits</a>
+          <a href="" class="cta cta-light">Nous contacter</a>
+        </nav>
     </header>
     <main>
       <div class="section-light">
-        <h2>Manger sainement: «un art de vie»</h2>
+        <h2>
+          Manger sainement:
+          <br> 
+          «un art de vie»
+        </h2>
         <p>
           Chez emojuice, nous tentons de vous fournir 
           des produits sains et respectueux de la planète.
         </p>
-        <img src="img/peach.svg" alt="peach">
-        <img src="img/lemon.svg" alt="lemon">
-        <img src="img/watermelon.svg" alt="watermelon">
-        <img src="img/orange.svg" alt="orange">
+        <div class="decoration">
+          <img class="tiny" src="img/peach.svg" alt="peach">
+          <img class="tiny" class="tiny" src="img/lemon.svg" alt="lemon">
+          <img class="tiny" class="tiny" src="img/watermelon.svg" alt="watermelon">
+          <img class="tiny" class="tiny" src="img/orange.svg" alt="orange">
+        </div>
       </div>
       <div class="section-color">
         <h2>Nos produits</h2>
-        <div class="card-light">
+        <div class="card card-light">
           <h3>Jus banane</h3>
           <p>Notre plus grand classique.</p>
-          <a href="">En savoir plus</a>
+          <a href="#">En savoir plus</a>
           <img src="img/banana.svg" alt="banana">
         </div>
-        <div class="card-green">
+        <div class="card card-green">
           <h3>Sirop kiwi</h3>
           <p>En vert et contre tous.</p>
-          <a href="">En savoir plus</a>
+          <a href="#">En savoir plus</a>
           <img src="img/kiwi.svg" alt="kiwi">
         </div>
-        <div class="card-light-brown">
+        <div class="card card-light-brown">
           <h3>Glace au café</h3>
           <p>«Un espresso pour Georges!»</p>
-          <a href="">En savoir plus</a>
+          <a href="#">En savoir plus</a>
           <img src="img/coffee.svg" alt="coffee">
         </div>
-        <div class="card-pink">
+        <div class="card card-pink">
           <h3>Délice à la fraise</h3>
           <p>La voilà qui ramène sa fraise.</p>
-          <a href="">En savoir plus</a>
+          <a href="#">En savoir plus</a>
           <img src="img/strawberry.svg" alt="strawberry">
         </div>
       </div>
@@ -70,10 +76,12 @@
     </main>
     <footer>
       <p></p>
-      <img src="img/banana.svg" alt="banana">
-      <img src="img/kiwi.svg" alt="kiwi">
-      <img src="img/apple.svg" alt="apple">
-      <img src="img/pineapple.svg" alt="pineapple">
+      <div class="decoration">
+        <img class="tiny" src="img/banana.svg" alt="banana">
+        <img class="tiny" src="img/kiwi.svg" alt="kiwi">
+        <img class="tiny" src="img/apple.svg" alt="apple">
+        <img class="tiny" src="img/pineapple.svg" alt="pineapple">
+      </div>
     </footer>
   </body>
 </html>
