--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
           <h3>Sirop kiwi</h3>
           <p>En vert et contre tous.</p>
           <a href="#">En savoir plus</a>
-          <img src="img/kiwi.svg" alt="kiwi">
+          <img src="img/coffee.svg" alt="kiwi">
         </div>
         <div class="card card-light-brown">
           <h3>Glace au café</h3>
           <p>«Un espresso pour Georges!»</p>
           <a href="#">En savoir plus</a>
-          <img src="img/coffee.svg" alt="coffee">
+          <img src="img/kiwi.svg" alt="coffee">
         </div>
         <div class="card card-pink">
           <h3>Délice à la fraise</h3>
