main terminer kiwi repatch
probleme lier a la taille du text patch avec border

--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
           <h3>Sirop kiwi</h3>
           <p>En vert et contre tous.</p>
           <a href="#">En savoir plus</a>
-          <img src="img/coffee.svg" alt="kiwi">
+          <img src="img/kiwi.svg" alt="kiwi">
         </div>
         <div class="card card-light-brown">
           <h3>Glace au café</h3>
           <p>«Un espresso pour Georges!»</p>
           <a href="#">En savoir plus</a>
-          <img src="img/kiwi.svg" alt="coffee">
+          <img src="img/coffee.svg" alt="coffee">
         </div>
         <div class="card card-pink">
           <h3>Délice à la fraise</h3>
@@ -69,11 +69,11 @@
         </div>
       </div>
       <nav>
-        <div class="section-light">
-          <h2>Nous contacter</h2>
-          <a href="" class="social mail">emojuice@veggies.ch</a>
-          <a href="https://www.instagram.com" class="social instagram">Instagram</a>
-          <a href="https://www.facebook.com" class="social facebook">Facebook</a>
+        <div class="green-letter section-light">
+          <h2> Nous contacter</h2>
+          <a href= "mailto:emojuice@veggies.ch">emojuice@veggies.ch</a>
+          <a href="https://www.instagram.com">Instagram</a>
+          <a href="https://www.facebook.com">Facebook</a>
         </div>
       </nav>
     </main>
