--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </nav>
     </main>
     <footer>
-      <p></p>
+      <p>Emojuice est une marque déposée par Veggies inc. Switzerland.</p>
       <div class="decoration">
         <img class="tiny" src="img/banana.svg" alt="banana">
         <img class="tiny" src="img/kiwi.svg" alt="kiwi">
