bouton terminer footer terminer  main terminer titre corriger taille image

--- a/index.html
+++ b/index.html
@@ -68,17 +68,21 @@
           <img src="img/strawberry.svg" alt="strawberry">
         </div>
       </div>
-      <nav>
-        <div class="green-letter section-light">
-          <h2> Nous contacter</h2>
-          <a href= "mailto:emojuice@veggies.ch">emojuice@veggies.ch</a>
-          <a href="https://www.instagram.com">Instagram</a>
-          <a href="https://www.facebook.com">Facebook</a>
-        </div>
-      </nav>
+      <div class="section-light green-letter">
+        <h2> Nous contacter</h2>
+        <nav class="cta-container"> 
+          <a class="cta" href="mailto:emojuice@veggies.ch">emojuice@veggies.ch</a>
+          <a class="cta" href="https://www.instagram.com">Instagram</a>
+          <a class="cta" href="https://www.facebook.com">Facebook</a>
+        </nav>
+      </div>
     </main>
     <footer>
-      <p>Emojuice est une marque déposée par Veggies inc. Switzerland.</p>
+      <p>
+        Emojuice est une marque déposée
+        <br> 
+        par Veggies inc. Switzerland.
+      </p>
       <div class="decoration">
         <img class="tiny" src="img/banana.svg" alt="banana">
         <img class="tiny" src="img/kiwi.svg" alt="kiwi">
