--- a/index.html
+++ b/index.html
@@ -24,15 +24,19 @@
         </nav>
     </header>
     <main>
-      <div class="section-light">
+      <div class="section-light-top">
         <h2>
           Manger sainement:
           <br> 
           «un art de vie»
         </h2>
         <p>
-          Chez emojuice, nous tentons de vous fournir 
-          des produits sains et respectueux de la planète.
+          Chez 
+          <strong>emojuice</strong>
+          , nous tentons de vous fournir 
+          des produits 
+          <strong>sains</strong> et 
+          <strong>respectueux</strong> de la planète.
         </p>
         <div class="decoration">
           <img class="tiny" src="img/peach.svg" alt="peach">
@@ -41,7 +45,7 @@
           <img class="tiny" class="tiny" src="img/orange.svg" alt="orange">
         </div>
       </div>
-      <div class="section-color">
+      <div>
         <h2>Nos produits</h2>
         <div class="card card-light">
           <h3>Jus banane</h3>
@@ -68,7 +72,7 @@
           <img src="img/strawberry.svg" alt="strawberry">
         </div>
       </div>
-      <div class="section-light green-letter">
+      <div class="section-light-bottom">
         <h2> Nous contacter</h2>
         <nav class="cta-container"> 
           <a class="cta" href="mailto:emojuice@veggies.ch">emojuice@veggies.ch</a>
