target blank added

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <p class="slogan">Boissons vététales préparées avec amour</p>
       </div>
         <nav class="cta-container">
-          <a href="" class="cta ">Accédez à nos produits</a>
-          <a href="" class="cta cta-light">Nous contacter</a>
+          <a href="#" class="cta " target="_blank" >Accédez à nos produits</a>
+          <a href="#" class="cta cta-light" target="_blank" >Nous contacter</a>
         </nav>
     </header>
     <main>
@@ -75,9 +75,21 @@
       <div class="section-light-bottom">
         <h2> Nous contacter</h2>
         <nav class="cta-container"> 
-          <a class="cta" href="mailto:emojuice@veggies.ch">emojuice@veggies.ch</a>
-          <a class="cta" href="https://www.instagram.com">Instagram</a>
-          <a class="cta" href="https://www.facebook.com">Facebook</a>
+          <a 
+            class="cta" 
+            href="mailto:emojuice@veggies.ch" 
+            target="_blank" >emojuice@veggies.ch
+          </a>
+          <a 
+            class="cta" 
+            href="https://www.instagram.com" 
+            target="_blank" >Instagram
+          </a>
+          <a 
+            class="cta" 
+            href="https://www.facebook.com" 
+            target="_blank">Facebook
+          </a>
         </nav>
       </div>
     </main>
